--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a href="#" class="btn">Browse menu</a>
         </div>
         <div class="img-item-top">
-          <img src="imgs/img2.png" class="a" alt="img-2" />
+          <img src="imgs/img2.png" alt="img-2" />
           <img src="imgs/img3.png" alt="img-3" />
           <img src="imgs/img4.png" alt="img-4" />
         </div>
